alb/main.tf
resource "aws_alb" "main" {
    name                            = "${var.name}-alb-${var.environment}"
    internal                        = false
    load_balancer_type              = "application"
    security_groups                 = [ aws_security_group.alb_sg.id ]
    subnets                         = var.subnets
    enable_deletion_protection      = false

    tags                            = {
        Name                            = "${var.name}_alb_${var.environment}"
        environment                     = var.environment
        terraform                       = true
    }
}

resource "aws_alb_target_group" "main" {
    name                            = "${var.name}-tg-${var.environment}"
    port                            = 80
    protocol                        = "HTTP"
    vpc_id                          = var.vpc_id
    target_type                     = "ip"

    health_check                    {
        healthy_threshold               = "3"
        interval                        = "30"
        protocol                        = "HTTP"
        matcher                         = "200"
        timeout                         = "5"
        path                            = var.health_check_path
        unhealthy_threshold             = "2"
    }
    
    tags                                = {
        Name                                = "${var.name}_alb_${var.environment}"
        environment                         = var.environment
        terraform                           = true
    }
}

resource "aws_alb_listener" "http" {
    load_balancer_arn               = aws_alb.main.id
    port                            = 80
    protocol                        = "HTTP"

    default_action {
        type                        = "redirect"

        redirect {
            port                    = 443
            protocol                = "HTTPS"
            status_code             = "HTTP_301"
        }
    }
}

resource "aws_alb_listener" "https" {
  load_balancer_arn                 = aws_alb.main.id
  port                              = 443
  protocol                          = "HTTPS"

  ssl_policy                        = "ELBSecurityPolicy-2016-08"
  certificate_arn                   = var.alb_tls_cert_arn
 
  default_action {
    type                            = "forward"
    target_group_arn                = aws_alb_target_group.main.id
  }

  tags                              = {
        Name                            = "${var.name}_alb_${var.environment}"
        environment                     = var.environment
        terraform                       = true
    }
}
