alb/security_group_rules.tf
resource "aws_security_group_rule" "alb_https_ingress" {
    type                        = "ingress"
    from_port                   = 443
    to_port                     = 443
    protocol                    = "tcp"
    cidr_blocks                 = ["0.0.0.0/0"]
    security_group_id           = aws_security_group.alb_sg.id
}

resource "aws_security_group_rule" "alb_http_ingress" {
    type                        = "ingress"
    from_port                   = 80
    to_port                     = 80
    protocol                    = "tcp"
    cidr_blocks                 = ["0.0.0.0/0"]
    security_group_id           = aws_security_group.alb_sg.id
}

resource "aws_security_group_rule" "alb_egress" {
    type                        = "egress"
    from_port                   = 0
    to_port                     = 0
    protocol                    = "-1"
    cidr_blocks                 = ["0.0.0.0/0"]
    security_group_id           = aws_security_group.alb_sg.id
}
